// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appview bookmarks views listing shows posts and blocked posts correctly 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": Object {
      "$type": "app.bsky.feed.defs#postView",
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 2,
      "cid": "cids(0)",
      "embed": Object {
        "$type": "app.bsky.embed.recordWithMedia#view",
        "media": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(1)@jpeg",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(1)@jpeg",
            },
            Object {
              "alt": "../dev-env/assets/key-alt.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(2)@jpeg",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(2)@jpeg",
            },
          ],
        },
        "record": Object {
          "$type": "app.bsky.embed.record#view",
          "record": Object {
            "$type": "app.bsky.embed.record#viewBlocked",
            "author": Object {
              "did": "user(2)",
              "viewer": Object {
                "blockedBy": false,
                "blocking": "record(4)",
              },
            },
            "blocked": true,
            "uri": "record(3)",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 2,
      "quoteCount": 1,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.recordWithMedia",
          "media": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(1)",
                  },
                  "size": 4114,
                },
              },
              Object {
                "alt": "../dev-env/assets/key-alt.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(2)",
                  },
                  "size": 12736,
                },
              },
            ],
          },
          "record": Object {
            "record": Object {
              "cid": "cids(3)",
              "uri": "record(3)",
            },
          },
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": true,
        "embeddingDisabled": false,
        "like": "record(5)",
        "threadMuted": false,
      },
    },
    "subject": Object {
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": Object {
      "$type": "app.bsky.feed.defs#blockedPost",
      "author": Object {
        "did": "user(2)",
        "viewer": Object {
          "blockedBy": false,
          "blocking": "record(4)",
        },
      },
      "blocked": true,
      "uri": "record(3)",
    },
    "subject": Object {
      "cid": "cids(3)",
      "uri": "record(3)",
    },
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": Object {
      "$type": "app.bsky.feed.defs#postView",
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(5)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(3)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(6)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(3)",
            "uri": "record(7)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(6)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(3)",
            "uri": "record(7)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 2,
      "cid": "cids(4)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(3)",
          "uri": "record(6)",
          "val": "self-label",
        },
      ],
      "likeCount": 0,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "labels": Object {
          "$type": "com.atproto.label.defs#selfLabels",
          "values": Array [
            Object {
              "val": "self-label",
            },
          ],
        },
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(6)",
      "viewer": Object {
        "bookmarked": true,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "subject": Object {
      "cid": "cids(4)",
      "uri": "record(6)",
    },
  },
]
`;

exports[`appview bookmarks views listing shows posts and blocked posts correctly 2`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": Object {
      "$type": "app.bsky.feed.defs#postView",
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "following": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 2,
      "cid": "cids(0)",
      "embed": Object {
        "$type": "app.bsky.embed.recordWithMedia#view",
        "media": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(1)@jpeg",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(1)@jpeg",
            },
            Object {
              "alt": "../dev-env/assets/key-alt.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(2)@jpeg",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(2)@jpeg",
            },
          ],
        },
        "record": Object {
          "record": Object {
            "$type": "app.bsky.embed.record#viewRecord",
            "author": Object {
              "associated": Object {
                "activitySubscription": Object {
                  "allowSubscriptions": "followers",
                },
              },
              "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(4)@jpeg",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "did": "user(2)",
              "displayName": "bobby",
              "handle": "bob.test",
              "labels": Array [],
              "viewer": Object {
                "blockedBy": false,
                "muted": false,
              },
            },
            "cid": "cids(3)",
            "embeds": Array [],
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "likeCount": 0,
            "quoteCount": 1,
            "replyCount": 0,
            "repostCount": 0,
            "uri": "record(2)",
            "value": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "langs": Array [
                "en-US",
                "i-klingon",
              ],
              "text": "bob back at it again!",
            },
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 2,
      "quoteCount": 1,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.recordWithMedia",
          "media": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(1)",
                  },
                  "size": 4114,
                },
              },
              Object {
                "alt": "../dev-env/assets/key-alt.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(2)",
                  },
                  "size": 12736,
                },
              },
            ],
          },
          "record": Object {
            "record": Object {
              "cid": "cids(3)",
              "uri": "record(2)",
            },
          },
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": true,
        "embeddingDisabled": false,
        "like": "record(3)",
        "threadMuted": false,
      },
    },
    "subject": Object {
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "item": Object {
      "$type": "app.bsky.feed.defs#blockedPost",
      "author": Object {
        "did": "user(4)",
        "viewer": Object {
          "blockedBy": true,
        },
      },
      "blocked": true,
      "uri": "record(4)",
    },
    "subject": Object {
      "cid": "cids(5)",
      "uri": "record(4)",
    },
  },
]
`;
